syntax = "proto3";

package rsca.api;
option go_package = "github.com/na4ma4/rsca/api";

import "github.com/na4ma4/rsca/api/common.proto";

service Admin {
    rpc ListHosts(Empty) returns (stream Member);
    rpc RemoveHost(RemoveHostRequest) returns (RemoveHostResponse);
    rpc TriggerAll(Members) returns (TriggerAllResponse);
    rpc TriggerInfo(Members) returns (TriggerInfoResponse);
}

message RemoveHostRequest {
    repeated string names = 1;
}

message RemoveHostResponse {
    repeated string names = 1;
}
